--- a/res/layout/activity_one_key_buy.xml
+++ b/res/layout/activity_one_key_buy.xml
@@ -43,6 +43,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/key_leibie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -66,6 +67,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/key_pinzhong"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -89,6 +91,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/key_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -97,18 +100,17 @@
                 android:hint="@string/age_hint" />
         </LinearLayout>
 
-        <TextView 
+        <TextView
             android:id="@+id/aok_nextStep"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:gravity="center"
-            android:clickable="true"
             android:background="@drawable/morebtn_selector"
-            android:textSize="16sp"
-            android:textColor="@color/white"
+            android:clickable="true"
+            android:gravity="center"
             android:text="@string/start_pipei"
-            />
+            android:textColor="@color/white"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </RelativeLayout>
