--- a/res/layout/toast_view_actionsheet.xml
+++ b/res/layout/toast_view_actionsheet.xml
@@ -16,7 +16,7 @@
         android:paddingBottom="10dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:textColor="@color/gray1"
+        android:textColor="@color/blackTextColor"
         android:textSize="13sp"
         android:visibility="gone" />
 
@@ -43,7 +43,7 @@
         android:background="@drawable/actionsheet_single_selector"
         android:gravity="center"
         android:text="取消"
-        android:textColor="@color/gray1"
+        android:textColor="@color/blackTextColor"
         android:textSize="18sp"
         android:textStyle="bold" />
 
