--- a/res/layout/index_fragment.xml
+++ b/res/layout/index_fragment.xml
@@ -114,6 +114,7 @@
                 android:orientation="horizontal" >
 
                 <ImageView
+                    android:id="@+id/good1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
