--- a/res/layout/mine_fragment.xml
+++ b/res/layout/mine_fragment.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical" >
 
         <RelativeLayout
+            android:id="@+id/to_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/themeColor"
