--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="myellow">#fdc517</color>
     <color name="onekeybuypressColor">#DDA814</color>
     <color name="subpressColor">#0199CC</color>
+    <color name="gray2">#99C0C0C0</color>
 </resources>
