--- a/res/layout/index_fragment.xml
+++ b/res/layout/index_fragment.xml
@@ -56,12 +56,15 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
         </LinearLayout>
+        <!-- 发货倒计时 -->
 
         <LinearLayout
+            android:id="@+id/index_f_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:background="@drawable/knockbcg"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
